Add bluetooth management/soft reset layer

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,8 +1,6 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# Uncomment ant set to n+1 to have max of n profiles/paired devices
+# CONFIG_BT_MAX_CONN=6
+# CONFIG_BT_MAX_PAIRED=6
 
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
