Remove reset for now, see if this works better?

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,6 @@
 # Uncomment ant set to n+1 to have max of n profiles/paired devices
-# CONFIG_BT_MAX_CONN=6
-# CONFIG_BT_MAX_PAIRED=6
+CONFIG_BT_MAX_CONN=6
+CONFIG_BT_MAX_PAIRED=6
 
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
